# glob-cpp

./: CMakeLists.txt  flake.nix
cmake/: googletest.cmake
examples/: wglob-cli.cc
include/glob-cpp/: file-glob.h  glob.h
tests/: CMakeLists.txt  glob-str-test.cc
